Wed Mar 13 09:25:56 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Add a "cvs init" command.  This is needed because cvsinit.sh
	invoked mkmodules which doesn't exist any more.
	* mkmodules.c: Break filelist out of mkmodules function, rename
	struct _checkout_file to struct admin_file (for namespace
	correctness), and add contents field.
	(init,mkdir_if_needed): New functions.
	* cvs.h (init): Declare.
	* main.c (cmds): Add init.
	(main): If command is init, don't require cvsroot to exist.
	* client.c, client.h (client_init, send_init_command): New functions.
	* client.c (start_server): Don't send Root request if command is init.
	* server.c (serve_init): New function.
	(requests): Add "init".

Wed Mar 13 09:51:03 MET 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* vers_ts.c (Version_TS): set options to default option if the
	  file if no -k option but -A was given.  This avoids the (wrong)
	  update message for binary files which are up-to-date when
	  running 'cvs -A'.

	* update.c (checkout_file): remove test of -k option stored in the
	  file itself because it was moved to vers_ts.c

	* sanity.sh: added tests for the above fix.

Tue Mar 12 13:47:09 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* hash.c (findnode): Adjust comment regarding errors.

	* hash.c (findnode, findnode_fn): Assert that key != NULL.  This
	way the check still happens even if the function is later
	rewritten to not start out by calling hashp.

Mon Mar 11 10:21:05 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: If expr accepts multi-line patterns but is too
	liberal in matching them, print a warning but keep going.

	* sanity.sh: Add QUESTION variable, analogous to PLUS.  Use it
	instead of \? to match a question mark.

	* cvs.h (CVSMODULE_OPTS, CVSMODULE_SPEC): Move from here...
	* modules.c: ...to here.  They are only used here and the code to
	handle the syntax of modules files should not be scattered all over.
	* modules.c (CVSMODULE_OPTS): Add "+" as first character.